fix: responsive on mobile/small screens

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
   h1 {
     font-size: 2rem;
   }
@@ -183,6 +183,11 @@ p {
 }
 
 .section-center {
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+
   width: 50vw;
   display: grid;
   margin: 2rem auto;
@@ -252,8 +257,9 @@ Carousel
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* filter: brightness(60%); */
 
+  /* filter: brightness(60%); */
+  position: relative;
 }
 
 #parkbench-img {
@@ -346,15 +352,6 @@ Countdown Timer
   font-size: 0.85rem;
 }
 
-@media screen and (min-width: 600px) {
-  .section-center {
-    display: grid;
-    grid-template-columns: 1fr;
-    place-items: center;
-    width: 75vw;
-  }
-}
-
 .info ul {
   margin: 2rem;
   font-size: 1.25rem;
@@ -400,7 +397,23 @@ Countdown Timer
   line-height: 2rem;
 }
 
-@media screen and (max-width: 600px) {
+.countdown-container {
+  padding: 3rem;
+  margin: 1rem;
+  width: 100%;
+  border-radius: 1rem;
+  position: relative;
+  top: 10%;
+  z-index: 50;
+  background: linear-gradient(
+    to right bottom,
+    rgba(53, 53, 53, 0.2),
+    rgba(80, 80, 80, 0.1)
+  );
+  backdrop-filter: blur(0.25rem);
+}
+
+@media screen and (max-width: 800px) {
   header {
     height: 23%;
   }
@@ -410,6 +423,20 @@ Countdown Timer
     padding-bottom: 0;
     margin: 0;
   }
+  .section-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    width: 80%;
+  }
+  .countdown-container {
+    padding: .5rem;
+    max-width: 90%;
+  }
   #prev,
   #next {
   padding: 2rem 0;
@@ -418,12 +445,9 @@ Countdown Timer
   z-index: 10;
   }
 
-  .section-center {
-    margin: 1rem;
-  }
-
   ul li{
-    font-size: 0.75rem;
+    font-size: 0.9rem;
+    line-height: 1.4rem;
   }
 
   .typing {
@@ -431,9 +455,7 @@ Countdown Timer
     margin-top: 0.25rem;
     padding-top: 0;
   }
-  .deadline-wrapper{
-    padding: 0 auto;
-  }
+
   .deadline-format {
     width: 3rem;
     height: 3rem;
@@ -456,20 +478,4 @@ Countdown Timer
   border-bottom: 0.4rem solid darkslategray;
   height: 0.2rem;
   width: 45%;
-}
-
-.countdown-container {
-  padding: 3rem;
-  margin: 1rem;
-  width: 80%;
-  border-radius: 1rem;
-  position: relative;
-  top: 40%;
-  z-index: 50;
-  background: linear-gradient(
-    to right bottom,
-    rgba(53, 53, 53, 0.2),
-    rgba(80, 80, 80, 0.1)
-  );
-  backdrop-filter: blur(0.25rem);
 }
